Made changes and corrected some errors.

--- a/305/guestbook-form/styles/guestbook.css
+++ b/305/guestbook-form/styles/guestbook.css
@@ -4,6 +4,9 @@ body {
 .btn-primary {
     background-color: slategrey;
 }
+.card > img {
+    background-color: #ffe484;
+}
 #emailhtml-block {
     display: none;
 }
